# LibreTune

./: .gitignore  AGENTS.md  APPIMAGE_WAYLAND_FIX.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_TODO.md  INI_MSQ_REVIEW.md  INI_SIGNATURE_FIX.md  PDF_COMPLIANCE_CHECKLIST.md  README.md  SPACE_OPTIMIZATION_SUMMARY.md  SPRINT_3_SUMMARY.md  SPRINT_5_CONTINUATION_GUIDE.md  SPRINT_5_PROGRESS_TRACK_A_STEP_1.md  SPRINT_5_PROGRESS_TRACK_A_STEP_2.md  SPRINT_5_PROGRESS_TRACK_A_STEP_3.md  SPRINT_5_PROGRESS_TRACK_A_STEP_4.md  SPRINT_5_TCP_SUPPORT.md  SPRINT_5_TRACK_A_SUMMARY.md  dialog-layout-comparison.html  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  trigger_pattern_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
crates/fcoretuner-app/: index.html  package-lock.json  package.json  typedoc.json
crates/fcoretuner-app/src/: App.tsx  TestApp.tsx
crates/fcoretuner-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/fcoretuner-core/: Cargo.toml
crates/fcoretuner-core/examples/: parse_test.rs  speeduino_test.rs
crates/libretune-app/: index.html  package-lock.json  package.json  vite.config.ts
crates/libretune-core/: Cargo.toml
docs/: DASHBOARD_SYSTEM.md  NISSAN_QG18_TRIGGER_SETUP.md  architecture.md  book.toml
docs/src/: SUMMARY.md  changelog.md  contributing.md  faq.md  introduction.md
docs/src/features/: autotune.md  (+3 more)
releases/: README.md
releases/macos/: BUILD_INFO.txt
scripts/: build-docs.sh  build-release.sh  dev-clean.sh  dev-test.sh  patch-appimage.sh  pre-push.sh  sanitized-inspect.sh  setup-dev.sh  tauri-dev.sh
(+536 files in other folders)
